--- a/test.html
+++ b/test.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eh afgahny</title>
-  </head>
-  <body>
-    <h1>first web page for mohamed</h1>
-  </body>
+<head>
+  <meta charset ="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>friedegg</title>
+</title>
+</head>
+<body>
+  <h1>Learn simply<br>
+       <br>
+  </h1>
+  <p>Welcome to my website all about programming.</p>
+  <h2> What is programming</h2>
+  <p>Programming is a way to tell computers what to do. its like giving
+    them a list of instructions to follow.
+  </p>
+  <h3>Why learn programming?</h3>
+  <p>Learning programming is important because it allows you 
+    to create software, websites, and apps. it's a valuable
+    skill in today's world.
+  </p>
+  <h4>Getting started</h4>
+  <p>To start leaning programming,you can follow these simple steps:</p>
+</body>
 </html>
