--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
 </title>
 </head>
 <body>
-  <h1>Learn simply<br>
-       <br>
+  <br>
+  <h1>Learn simply<hr>
   </h1>
-  <p>Welcome to my website all about programming.</p>
-  <h2> What is programming</h2>
-  <p>Programming is a way to tell computers what to do. its like giving
-    them a list of instructions to follow.
+  <p>
+   <mark>Welcome to my website all about programming.</mark> 
+  </p>
+  <h2> <u>What is programming</u></h2>
+  <p><i>Programming is a way to tell computers what to do. its like giving
+    them a list of instructions to follow.</i>
   </p>
   <h3>Why learn programming?</h3>
-  <p>Learning programming is important because it allows you 
-    to create software, websites, and apps. it's a valuable
-    skill in today's world.
+  <p>Learning programming is <del>not</del> important because it allows<sup>you</sup>
+    to create <mark>software</mark> , <mark> websites</mark>, and <mark>apps</mark>. it's a valuable
+    skill in today's<sub>world.</sub> 
   </p>
   <h4>Getting started</h4>
-  <p>To start leaning programming,you can follow these simple steps:</p>
+  <p>To start leaning programming,you can follow these simple <small>steps</small> </p>
 </body>
-</html>https://mashmashbats-hub.github.io/-----/
+</html>
