Replace content in index.html with new topic

--- a/index.html
+++ b/index.html
@@ -1,28 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset ="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>friedegg</title>
-</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <br>
-  <h1>Learn simply<hr>
-  </h1>
-  <p>
-   <mark>Welcome to my website all about programming.</mark> 
-  </p>
-  <h2> <u>What is programming</u></h2>
-  <p><i>Programming is a way to tell computers what to do. its like giving
-    them a list of instructions to follow.</i>
-  </p>
-  <h3>Why learn programming?</h3>
-  <p>Learning programming is <del>not</del> important because it allows<sup>you</sup>
-    to create <mark>software</mark> , <mark> websites</mark>, and <mark>apps</mark>. it's a valuable
-    skill in today's<sub>world.</sub> 
-  </p>
-  <h4>Getting started</h4>
-  <p>To start leaning programming,you can follow these simple <small>steps</small> </p>
+    <h1>Why is roblox closing</h1>
+    <img src="images/roblox.jpg" width="500">
+    <p><u><strong>Roblox</strong> is closing because:</u></p>
+    <ul>
+        <li>its so <mark>boring</mark></li>
+        <li>its old</li>
+        <li>kids are everwhere</li>
+    </ul>
+
 </body>
 </html>
