Change image source in index.html
Updated image source to a new URL.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Why is roblox closing</h1>
-    <img src="images/roblox.jpg" width="500">
+    <img src="https://cdn.pixabay.com/photo/2017/04/25/22/28/despaired-2261021_1280.jpg" width="500">
     <p><u><strong>Roblox</strong> is closing because:</u></p>
     <ul>
         <li>its so <mark>boring</mark></li>
@@ -17,3 +17,4 @@
 
 </body>
 </html>
+
